# codebert-head-interpretability

./: .gitignore  README.md  dataset.py  main.py  notebook.ipynb  pyproject.toml
experiments/: mismatched_code_query.py  token_classification.py  token_classification_code_only.py  token_classification_code_query.py
head_analysis_java_outputs/code_only/: analysis_stats.txt
head_analysis_java_outputs/code_query/: analysis_stats.txt
head_analysis_java_outputs/mismatch/: analysis_stats.txt
head_analysis_python_outputs/code_only/: analysis_stats.txt
head_analysis_python_outputs/code_query/: analysis_stats.txt
head_analysis_python_outputs/intervention_comparison/: analysis_stats.txt
head_analysis_python_outputs/mismatch/: analysis_stats.txt
notebooks/: token_classification_with_lexer.ipynb
src/codebert_head_interpretability/alignment/: token_alignment.py
src/codebert_head_interpretability/analysis/: code_analysis.py  visualization.py
src/codebert_head_interpretability/analytics/: analysis.py  visualization.py
src/codebert_head_interpretability/dataset/: __init__.py  base.py  codesearchnet.py
src/codebert_head_interpretability/datasets/: __init__.py  base.py  codesearchnet.py
src/codebert_head_interpretability/interventions/: __init__.py  head_ablation.py
src/codebert_head_interpretability/languages/: __init__.py  base.py  java_spec.py  python_spec.py
src/codebert_head_interpretability/models/: __init__.py  base.py  code_query.py  codebert.py  tokens.py
src/codebert_head_interpretability/parsers/: __init__.py  token_classifier.py  (+1 more)
(+29 files in other folders)
