[project]
name = "codebert-head-interpretability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "pygments>=2.19.2",
    "transformers>=5.5.1",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebert_head_interpretability"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
